--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <noscript>
-    <strong>We're sorry but RecipeApp doesn't work properly without JavaScript
+    <strong>We're sorry but AllSpice doesn't work properly without JavaScript
       enabled. Please enable it to continue.</strong>
   </noscript>
   <div id="app"></div>
